Add Google Analytics GA4 tracking script to index.html

--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:image" content="/dispet-logo-symbol-bg.png" />
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-EYVPHCTL51"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-EYVPHCTL51');
+  </script>
+
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
